# zgrany-budzet-events

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  pytest.toml  verify_minister_flow.py  verify_state_machine.py
.github/workflows/: deploy-docker.yml  run-checks.yml
aws/: app-template.json  ecr-template.json  ecs-task.yaml  github-actions-role-trust-policy.json
doc/: event_sourcing_analysis.md  event_sourcing_analysis_round_2.md  event_sourcing_transition_plan.md  event_store_review.md  optimistic_locking_guide.md  planning_aggregate_creation_analysis.md
e2e/: __init__.py  conftest.py  state_replay_test.py  test_happy_path.py
flaskr/: auth.py  db.py  extensions.py  init_db.py  main.py
flaskr/data/: dzial_rozdzial_mapping.json  dzialy.json  expenses_template.json  rozdzialy.json
flaskr/events/: __init__.py  event_database.py  event_replay.py  event_repository.py  event_store.py  event_store_test.py  replay_wrapper.py  replay_wrapper_test.py  serialisation.py  state_replay_test.py  types.py
flaskr/planning/: __init__.py  planning_aggregate.py  planning_repository.py  planning_service.py  planning_workflow.py  state.py  state_replay_test.py  types.py  views.py
flaskr/scripts/: convert_expenses.py  extract_classifications.py  init_db.py
flaskr/templates/: base.html  chief_dashboard.html  icons.html  minister_dashboard.html  sectionTemplate.html
src/: anything_test.py  auth.py  init_db.py  main.py  main.py.orig
src/constants/: constants.py
src/e2e/: conftest.py  test_happy_path.py
src/expenses/: __init__.py  __init__.py.orig
src/planning/: __init__.py  planning_workflow.py
src/schema/: schema.py
src/scripts/: convert_expenses.py
src/sql_scripts/: create_tables.sql  populate.sql
test_data/: test_events.jsonl  test_replay.jsonl
(+22 files in other folders)
