[project]
name = "zgrany-budget"
version = "0.1.0"
description = ""
authors = [
    {name = "Michał Ciesielski",email = "majalcmaj@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "werkzeug (>=3.0.0,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)",
    "pytest (>=9.0.1,<10.0.0)"
]
