[project]
name = "zgrany-budget"
version = "0.1.0"
description = ""
authors = [
    {name = "Michał Ciesielski",email = "majalcmaj@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "werkzeug (>=3.0.0,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-playwright (>=0.7.2,<0.8.0)",
    "playwright (>=1.57.0,<2.0.0)",
    "mypy (>=1.19.0,<2.0.0)",
    "types-openpyxl (>=3.1.5.20250919,<4.0.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "pyright (>=1.1.407,<2.0.0)"
]

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.pyright]
include = ["e2e", "flaskr"]
exclude = ["**/node_modules", "**/__pycache__"]
defineConstant = { DEBUG = true }
stubPath = "src/stubs"

pythonVersion = "3.13"
pythonPlatform = "Linux"
strict = ["flaskr", "e2e"]

